Fix spacing

--- a/frontend/pages/admin/IntegrationsPage/cards/MdmSettings/VppPage/components/AddVppModal/_styles.scss
+++ b/frontend/pages/admin/IntegrationsPage/cards/MdmSettings/VppPage/components/AddVppModal/_styles.scss
@@ -1,5 +1,9 @@
 .add-vpp-modal {
 
+  &__description {
+    margin: 0;
+  }
+
   &__request-button {
     display: flex;
     gap: $pad-small;
