--- a/frontend/pages/admin/IntegrationsPage/cards/MdmSettings/VppPage/components/RenewVppModal/_styles.scss
+++ b/frontend/pages/admin/IntegrationsPage/cards/MdmSettings/VppPage/components/RenewVppModal/_styles.scss
@@ -1,7 +1,7 @@
 .renew-vpp-modal {
 
   &__description {
-    margin: 0 0 $pad-large;
+    margin: 0;
   }
 
   &__file-uploader {
